; ModuleID = '/home/carl/AnghaBench/freebsd/sys/compat/cloudabi/extr_cloudabi_clock.c_cloudabi_clock_time_get.c'
source_filename = "/home/carl/AnghaBench/freebsd/sys/compat/cloudabi/extr_cloudabi_clock.c_cloudabi_clock_time_get.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.thread = type { i32 }
%struct.timespec = type { i32 }

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @cloudabi_clock_time_get(%struct.thread* %0, i32 %1, i32* %2) #0 {
  %4 = alloca i32, align 4
  %5 = alloca %struct.thread*, align 8
  %6 = alloca i32, align 4
  %7 = alloca i32*, align 8
  %8 = alloca %struct.timespec, align 4
  %9 = alloca i32, align 4
  %10 = alloca i32, align 4
  store %struct.thread* %0, %struct.thread** %5, align 8
  store i32 %1, i32* %6, align 4
  store i32* %2, i32** %7, align 8
  %11 = load i32, i32* %6, align 4
  %12 = call i32 @cloudabi_convert_clockid(i32 %11, i32* %10)
  store i32 %12, i32* %9, align 4
  %13 = load i32, i32* %9, align 4
  %14 = icmp ne i32 %13, 0
  br i1 %14, label %15, label %17

15:                                               ; preds = %3
  %16 = load i32, i32* %9, align 4
  store i32 %16, i32* %4, align 4
  br label %28

17:                                               ; preds = %3
  %18 = load %struct.thread*, %struct.thread** %5, align 8
  %19 = load i32, i32* %10, align 4
  %20 = call i32 @kern_clock_gettime(%struct.thread* %18, i32 %19, %struct.timespec* %8)
  store i32 %20, i32* %9, align 4
  %21 = load i32, i32* %9, align 4
  %22 = icmp ne i32 %21, 0
  br i1 %22, label %23, label %25

23:                                               ; preds = %17
  %24 = load i32, i32* %9, align 4
  store i32 %24, i32* %4, align 4
  br label %28

25:                                               ; preds = %17
  %26 = load i32*, i32** %7, align 8
  %27 = call i32 @cloudabi_convert_timespec(%struct.timespec* %8, i32* %26)
  store i32 %27, i32* %4, align 4
  br label %28

28:                                               ; preds = %25, %23, %15
  %29 = load i32, i32* %4, align 4
  ret i32 %29
}

declare dso_local i32 @cloudabi_convert_clockid(i32, i32*) #1

declare dso_local i32 @kern_clock_gettime(%struct.thread*, i32, %struct.timespec*) #1

declare dso_local i32 @cloudabi_convert_timespec(%struct.timespec*, i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
